--- a/index.html
+++ b/index.html
@@ -1,45 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJETO</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="majora.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="me.jpeg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container">
-        <h1>MEUS PROJETOS</h1>
-        <h2>Acompanhe minhas redes sociais:</h2>
+        <div class="sobrepc">
+            <div><img src="me.jpeg" alt=""></div>
+            <h1>Sobre Mim</h1>
+            <h3>Sou Caio Carvalho, um profissional versátil com habilidades em desenvolvimento web, edição de imagem,
+                edição de vídeo e gestão de projetos. Tenho experiência em criar sites modernos e responsivos, editar
+                imagens e vídeos com qualidade profissional, e organizar projetos com eficiência para alcançar os
+                melhores resultados.</h3>
+
+        </div>
+        <div class="sobredv">
+            <div><img src="me.jpeg" alt=""></div>
+            <h1>Caio Carvalho</h1>
+
+        </div>
+        <hr>
+
+        <h1>Acompanhe minhas redes sociais:</h1>
         <div class="perf">
-            <a href="https://github.com/caiuslenda14" target="_blank"><div class="r">
-                <h1><i class='fab fa-github'></i> GitHub</h1>
-            </div></a>
-            <a href="https://www.instagram.com/caiooookkjj/" target="_blank"><div class="r">
-                <h1><i class='fab fa-instagram'></i> Instagram</h1>
-            </div></a>
-            <a href="https://www.linkedin.com/in/caio-silva-carvalho-326269358/" target="_blank"><div class="r">
-                <h1><i class='fab fa-linkedin'></i> LinkedIn</h1>
-            </div></a>
+            <a href="https://github.com/caiuslenda14" target="_blank">
+                <div class="r">
+                    <h1><i class='fab fa-github'></i> GitHub</h1>
+                </div>
+            </a>
+            <a href="https://www.instagram.com/caiooookkjj/" target="_blank">
+                <div class="r">
+                    <h1><i class='fab fa-instagram'></i> Instagram</h1>
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/in/caio-silva-carvalho-326269358/" target="_blank">
+                <div class="r">
+                    <h1><i class='fab fa-linkedin'></i> LinkedIn</h1>
+                </div>
+            </a>
+        </div>
+        <h1>MEUS PROJETOS</h1>
+        <div class="sone">
+            <h1>Cardápio Funcional LOV SO SWEET</h1>
+            <div id="img">
+                <a href="https://caiuslenda14.github.io/CARDAPIO-LOVSOSWEET/index.html" target="_blank"><img
+                        src="cardapio.png" alt=""></a>
+                <p>Cardápio funcional com botões para facilitar a escolha dos produtos.<br><span>Pressione na imagem
+                        para ver o site completo.</span></p>
+            </div>
         </div>
         <hr>
         <div class="sone">
             <h1>Projeto StagiONE</h1>
             <div id="img">
-                <a href="https://caiuslenda14.github.io/StagiONE/index.html" target="_blank"><img src="image.png" alt=""></a>
-                <p>Protótipo de Website com Login, Cadastro e aba "Mais"<br><span>Pressione na imagem para ver o site completo.</span></p>
+                <a href="https://caiuslenda14.github.io/StagiONE/index.html" target="_blank"><img src="image.png"
+                        alt=""></a>
+                <p>Protótipo de Website com Login, Cadastro e aba "Mais"<br><span>Pressione na imagem para ver o site
+                        completo.</span></p>
             </div>
         </div>
         <hr>
         <div class="sone">
             <h1>Mercantil Nicolau</h1>
             <div id="img">
-                <a href="https://caiuslenda14.github.io/MERCANTIL-NICOLAU/index.html" target="_blank"><img src="nf.png" alt=""></a>
-                <p>Website empresarial informativo de uma empresa de Parnaíba.<br><span>Pressione na imagem para ver o site completo.</span></p>
+                <a href="https://caiuslenda14.github.io/MERCANTIL-NICOLAU/index.html" target="_blank"><img src="nf.png"
+                        alt=""></a>
+                <p>Website empresarial informativo de uma empresa de Parnaíba.<br><span>Pressione na imagem para ver o
+                        site completo.</span></p>
             </div>
         </div>
     </div>
-    <a href="https://github.com/caiuslenda14" target="_blank"><p>desenvolvido por caiuslenda14<br>2025</p></a>
+    <a href="https://github.com/caiuslenda14" target="_blank">
+        <p>desenvolvido por caiuslenda14<br>2025</p>
+    </a>
 </body>
+
 </html>
