--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <a href="https://www.linkedin.com/in/caio-silva-carvalho-326269358/" target="_blank">
                             <p class="link"><i class='fab fa-linkedin' style='font-size:35px'></i></p>
                         </a>
-                        <a href="https://open.spotify.com/user/31qfyichbfnhfvbfjrtykb7h3vzq?si=ab270f51d4b94956"
+                        <a href="https://steamcommunity.com/id/desistiremos/"
                             target="_blank">
-                            <p class="spot"><i class='fab fa-spotify' style='font-size:35px'></i></p>
+                            <p class="steam"><i class="fa fa-steam" aria-hidden="true" style='font-size:35px'></i></p>
                         </a>
                     </div>
                 </div>
