--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
                     </div>
                 </a>
                 <hr>
+                <a href="https://caiuslenda14.github.io/EMPRESA-X/" target="_blank">
+                    <div class="projeto">
+                        <img src="empresax.jpg" alt="">
+                        <div class="textoDiv">
+                            <h1>Projeto de aprendizado Empresa X</h1>
+                            <h2>Website com sistema de cadastro e login com informações hospedadas no cache da sessão. Cadastro e Login temporários funcionais.</h2>
+                            <p>Aperte para ir para o site.</p>
+                        </div>
+                    </div>
+                </a>
+                <hr>
                 <a href="https://caiuslenda14.github.io/MERCANTIL-NICOLAU/" target="_blank">
                     <div class="projeto">
                         <img src="nf.png" alt="">
@@ -80,7 +91,6 @@
                         </div>
                     </div>
                 </a>
-    
             </div>
     
             </div >
