--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <div class="pc">
+        <div class="bemvindo">
+            <h1>Bem vindo!</h1>
+        </div>
         <div class="container">
             <div class="sobreMim , outline">
                 <div class="sobreTexto">
@@ -118,6 +121,15 @@
         window.onload = function () {
             document.getElementById('projetos').style.display = 'none';
         };
+
+
+
+
+
+
+
+
+        
     </script>
 </body>
 
